--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="0xgW7VTgKud0IP4cdgDX5Kpaw80pO7zfIIPWdgKy_v8" />
     <meta charset="utf-8">
     <title>Sharath Kumar RG</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
