--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                     <div class="testimonial-left h-100">
                         <img class="img-fluid wow fadeIn" data-wow-delay="0.1s" src="img/aws.png" alt="">
                         <img class="img-fluid wow fadeIn" data-wow-delay="0.3s" src="img/cisco.png" alt="">
-                        <img class="img-fluid wow fadeIn" data-wow-delay="0.5s" src="img/coursera.png" alt="">
+                        <img class="img-fluid wow fadeIn" data-wow-delay="0.5s" src="img/pega.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -541,14 +541,14 @@
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/coursera.png" alt="">
+                                <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/pega.png" alt="">
                                 <div class="testimonial-icon">
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">"Programming for Everybody" Use variables to store, retrieve and calculate information Utilize core programming tools such as functions and loops.</p>
+                            <p class="fs-5 fst-italic">Global certification in Pega - "Certified System Architect 8.7</p>
                             <hr class="w-25 mx-auto">
-                            <h5>coursera</h5>
+                            <h5>Pega</h5>
                             
                         </div>
                     </div>
@@ -557,7 +557,7 @@
                     <div class="testimonial-right h-100">
                         <img class="img-fluid wow fadeIn" data-wow-delay="0.1s" src="img/cisco.png" alt="">
                         <img class="img-fluid wow fadeIn" data-wow-delay="0.3s" src="img/aws.png" alt="">
-                        <img class="img-fluid wow fadeIn" data-wow-delay="0.5s" src="img/coursera.png" alt="">
+                        <img class="img-fluid wow fadeIn" data-wow-delay="0.5s" src="img/pega.png" alt="">
                     </div>
                 </div>
             </div>
