--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Embedded Enthusiast</div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="https://drive.google.com/uc?export=download&id=16mzC-fC0F3pHYzNQoEsWIv_hMMCpir_a" class="btn btn-primary py-3 px-4 me-5">Download Resume</a>
+                        <a href="https://drive.google.com/uc?export=download&id=1DeEiWM-qFf7izm0Yj6ZCXdTpHBtknveJ" class="btn btn-primary py-3 px-4 me-5">Download Resume</a>
                         <!--<button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="" data-bs-target="#videoModal">
                             <span></span>
@@ -129,11 +129,12 @@
                             <h1 class="display-1 mb-0">10</h1>
                             <h5 class="mb-0">Projects</h5>
                         </div>
-                        <h3 class="lh-base mb-0">have been completed, and one of them has received funding and a patent.</h3>
+                        <h3 class="lh-base mb-0">have been completed, and two of them has received funding and a patent.</h3>
                     </div>
                     <p class="mb-4">These projects are focused on various sectors such as Security Management System, Home Basics, Caution Devices, and so on.</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>SIH Winner 2022 recived 1 Lakh rupees</p>
-                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>IEEE Student Project Funding winner recived 10,000 rupees</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>IEEE Student Project Funding winner recived 10,000 rupees - 2022</p>
+                    <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>IEEE Student Project Funding winner recived 5,000 rupees - 2023</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Leo Muthu Scholarship Winner 1 Lakh rupees</p>
                     <div class="d-flex align-items-center mb-3">
                         <h5 class="border-end pe-3 me-3 mb-0">Patent's Published</h5>
@@ -153,11 +154,12 @@
                     </div>
                     <div class="d-flex align-items-center mb-3">
                         <h5 class="border-end pe-3 me-3 mb-0">Paper's Published</h5>
-                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">3</h2>
+                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">4</h2>
                     </div>
                     <p class="mb-4">"Augmented Security System for Commercial buildings by Manipulating Object Detection and Admin Panel", 2022 International Conference on Communication, Computing and Internet of Things (IC3IoT), Chennai, India, 2022, pp. 1-6, doi: 10.1109/IC3IOT53935.2022.9767997.</p>
                     <p class="mb-4">Dr J.Raja, N. Nazeeya Anjum, R. G. Sharath Kumar, K.Hariharan. "Ethanol Concentration Detector with Statistical Logger Using Iot Cloud Service". European Journal of Molecular & Clinical Medicine, 9, 7, 2022, 5593-5599.</p>
                     <p class="mb-4">"Swetha, D., RG Sharath Kumar, V. Rithika, and N. Jayapreetha. "Pocket-sized gadget for detection of Liquefied crude oil in Molecular state with IOT enabled lightning notification system." In 2022 International Conference on Power, Energy, Control and Transmission Systems (ICPECTS), pp. 1-5. IEEE, 2022. </p>
+                    <p class="mb-4">"RG Sharath Kumar, et al. "Camobot-Thermal Image Processing Surveillance Rover with GPS Tracking and Human Detection Using OpenCV." 2023 International Conference on Recent Advances in Electrical, Electronics, Ubiquitous Communication, and Computational Intelligence (RAEEUCCI). IEEE, 2023. </p>
                 </div>
             </div>
         </div>
@@ -517,6 +519,18 @@
                     <div class="owl-carousel testimonial-carousel">
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
+                                <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/aws white logo.png" alt="">
+                                <div class="testimonial-icon">
+                                    <i class="fa fa-quote-left text-primary"></i>
+                                </div>
+                            </div>
+                            <p class="fs-5 fst-italic">"AWS Certified Developer - Associate (DVA-C02)"</p>
+                            <hr class="w-25 mx-auto">
+                            <h5>AWS</h5>
+                            
+                        </div>
+                        <div class="testimonial-item text-center">
+                            <div class="position-relative mb-5">
                                 <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/cisco.png" alt="">
                                 <div class="testimonial-icon">
                                     <i class="fa fa-quote-left text-primary"></i>
@@ -556,7 +570,7 @@
                 <div class="col-lg-3 d-none d-lg-block">
                     <div class="testimonial-right h-100">
                         <img class="img-fluid wow fadeIn" data-wow-delay="0.1s" src="img/cisco.png" alt="">
-                        <img class="img-fluid wow fadeIn" data-wow-delay="0.3s" src="img/aws.png" alt="">
+                        <img class="img-fluid wow fadeIn" data-wow-delay="0.3s" src="img/aws white logo.png" alt="">
                         <img class="img-fluid wow fadeIn" data-wow-delay="0.5s" src="img/pega.png" alt="">
                     </div>
                 </div>
