Updated keyword index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <title>Sharath Kumar RG</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    <meta name="keywords" content="RG Sharath Kumar, Sharath Kumar RG, RG Sharath">
+    <meta name="description" content="Welcome to the website of Sharath Kumar RG. Explore the work and achievements of Sharath Kumar RG.">
+    
     <!-- Favicon -->
     <link href="" rel="icon">
 
