--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h3 class="text-primary mb-3">I'm</h3>
                     <h1 class="display-3 mb-3">Sharath Kumar RG</h1>
                     <h2 class="typed-text-output d-inline"></h2>
-                    <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Embedded Enthusiast</div>
+                    <div class="typed-text d-none">AI/ML Data Science Engineer, Data Analyst, Data Engineer, Web Designer, Web Developer, Front End Developer, Embedded Enthusiast</div>
                     <div class="d-flex align-items-center pt-5">
                         <a href="https://drive.google.com/uc?export=download&id=1DeEiWM-qFf7izm0Yj6ZCXdTpHBtknveJ" class="btn btn-primary py-3 px-4 me-5">Download Resume</a>
                         <!--<button type="button" class="btn-play" data-bs-toggle="modal"
