--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea name="message"class="form-control" placeholder="Leave a message here" id="message" style="height: 100px" value="" required=""></textarea>
+                                    <textarea name="Message"class="form-control" placeholder="Leave a message here" id="message" style="height: 100px" value="" required=""></textarea>
                                     <label for="message">Message</label>
                                 </div>
                             </div>
